--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
   "name": "receitasdonabentarefatorado",
   "version": "1.0.0",
+  "type": "module",
   "main": "index.ts",
   "scripts": {
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
+    "lint:fix": "eslint . --ext .js,.jsx,.ts,.tsx --fix",
+    "format": "prettier --write .",
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
@@ -21,6 +25,16 @@
     "@babel/core": "^7.25.2",
     "@types/react": "~19.0.10",
     "@types/styled-components-react-native": "^5.2.5",
+    "@typescript-eslint/eslint-plugin": "^8.33.0",
+    "@typescript-eslint/parser": "^8.33.0",
+    "eslint": "^9.27.0",
+    "eslint-config-prettier": "^10.1.5",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
+    "eslint-plugin-prettier": "^5.4.0",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-react-native": "^5.0.0",
+    "prettier": "^3.5.3",
     "typescript": "~5.8.3"
   },
   "private": true
